--- a/pysparc/config.ini
+++ b/pysparc/config.ini
@@ -1,5 +1,8 @@
 [DAQ]
 force_align_adcs = True
+station_name = my_station
+station_number = 0
+station_password = my_password
 
 [HiSPARC III Master]
 ch1_gain_negative = 128
