--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -1,4 +1,8 @@
 ---
+- name: Make sure hisparc user is in adm group
+  user: name=hisparc groups=adm,sudo,plugdev append=yes
+  sudo: yes
+
 - name: Update package index
   apt: update_cache=yes
   sudo: yes
