--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -18,3 +18,11 @@
 - name: Allow access to FTDI devices
   copy: src=99-libftdi.rules dest=/etc/udev/rules.d/99-libftdi.rules
   sudo: yes
+
+- name: Install ACL utilities
+  apt: name=acl state=present
+  sudo: yes
+
+- name: Install git
+  apt: name=git state=present
+  sudo: yes
