Provision user accounts on Pi's

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -3,6 +3,10 @@
   tasks:
     - include: vagrant.yml
 
+- hosts: raspberry_pi
+  tasks:
+    - include: raspberry_pi.yml
+
 - hosts: all
   tasks:
     - include: common.yml
