--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -30,3 +30,13 @@
 - name: Install supervisor
   apt: name=supervisor state=present
   sudo: yes
+
+- name: Configure supervisor
+  copy: src=supervisord.conf dest=/etc/supervisor/supervisord.conf
+  sudo: yes
+  register: supervisorconfig
+
+- name: Restart supervisor
+  service: name=supervisor state=restarted
+  sudo: yes
+  when: supervisorconfig|changed
