Set up environment

--- a/provisioning/supervisord-pysparc.conf
+++ b/provisioning/supervisord-pysparc.conf
@@ -1,6 +1,7 @@
 [program:pysparc]
 command=/usr/bin/python /opt/pysparc/scripts/test_hv.py
 user=hisparc
+environment=HOME=/home/hisparc,USER=hisparc
 redirect_stderr=true
 stdout_logfile=/var/log/pysparc.log
 autostart=false
