Fix supervisor config

--- a/provisioning/supervisord-pysparc.conf
+++ b/provisioning/supervisord-pysparc.conf
@@ -1,7 +1,8 @@
 [program:pysparc]
 command=/usr/bin/python /opt/pysparc/scripts/test_hv.py
 user=hisparc
-environment=HOME=/home/hisparc,USER=hisparc
+environment=HOME="/home/hisparc",USER="hisparc"
+directory=/home/hisparc
 redirect_stderr=true
 stdout_logfile=/var/log/pysparc.log
-autostart=false
+autostart=true
