Send SIGINT (ctrl-c) to stop PySPARC

--- a/provisioning/supervisord-pysparc.conf
+++ b/provisioning/supervisord-pysparc.conf
@@ -3,6 +3,7 @@ command=/usr/bin/python /opt/pysparc/scripts/test_hv.py
 user=hisparc
 environment=HOME="/home/hisparc",USER="hisparc"
 directory=/home/hisparc
+stopsignal=INT
 redirect_stderr=true
 stdout_logfile=/var/log/pysparc.log
 autostart=true
