--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -30,6 +30,7 @@
 
 - name: waiting for server to come back
   local_action: wait_for host={{ inventory_hostname }} state=started
+                port=22 delay=5
 
 - name: Install screen
   apt: name=screen state=present
