--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -29,8 +29,8 @@
   sudo: yes
 
 - name: waiting for server to come back
-  local_action: wait_for host={{ inventory_hostname }} state=started
-                port=22 delay=5
+  local_action: wait_for host={{ ansible_ssh_host }} state=started
+                port={{ ansible_ssh_port }} delay=5
 
 - name: Install screen
   apt: name=screen state=present
