Fix reboot, now use a handler

--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -19,18 +19,11 @@
   stat: path=/var/run/reboot-required
   register: p
 
-# https://support.ansible.com/hc/en-us/articles/201958037-Reboot-a-server-and-wait-for-it-to-come-back
-- name: Reboot if necessary after upgrade
-  command: shutdown -r now "Ansible triggered a reboot"
-  async: 0
-  poll: 0
-  ignore_errors: true
-  when: p.stat.isfile is defined
-  sudo: yes
-
-- name: waiting for server to come back
-  local_action: wait_for host={{ ansible_ssh_host }} state=started
-                port={{ ansible_ssh_port }} delay=5
+# if path p is a regular file, trigger reboot
+- name: Flag a reboot if necessary
+  command: /bin/true
+  when: p.stat.isreg is defined
+  notify: reboot
 
 - name: Install screen
   apt: name=screen state=present
