--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -36,6 +36,7 @@
 - name: Allow access to FTDI devices
   copy: src=99-libftdi.rules dest=/etc/udev/rules.d/99-libftdi.rules
   sudo: yes
+  notify: reboot
 
 - name: Install ACL utilities
   apt: name=acl state=present
