Enable handlers for pi-specific tasks

--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -6,6 +6,8 @@
 - hosts: raspberry_pi
   tasks:
     - include: raspberry_pi.yml
+  handlers:
+    - include: handlers.yml
 
 - hosts: all
   tasks:
