--- a/provisioning/handlers.yml
+++ b/provisioning/handlers.yml
@@ -16,4 +16,9 @@
   async: 0
   poll: 0
   ignore_errors: true
+  notify: wait for server to come back
   sudo: yes
+
+- name: wait for server to come back
+  local_action: wait_for host={{ inventory_hostname }} port=22
+                delay=5 state=started
