Disable password for user 'pi'

--- a/provisioning/raspberry_pi.yml
+++ b/provisioning/raspberry_pi.yml
@@ -27,6 +27,10 @@
   sudo: yes
   notify: restart openvpn
 
+- name: disable password login for user 'pi'
+  user: name=pi state=present password=!
+  sudo: yes
+
 - name: Create 'hisparc' user
   user: name=hisparc state=present
   sudo: yes
