Fixed the supervisor init script
Added --retry 30 to --stop lines. It can take a while for supervisord to
actually shut down, waiting for pysparc.

--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -82,6 +82,10 @@
   apt: name=supervisor state=present
   sudo: yes
 
+- name: Fix supervisor init script
+  copy: src=supervisor.init dest=/etc/init.d/supervisor
+  sudo: yes
+
 - name: Configure supervisor
   copy: src=supervisord.conf dest=/etc/supervisor/supervisord.conf
   sudo: yes
