--- a/provisioning/common.yml
+++ b/provisioning/common.yml
@@ -1,4 +1,7 @@
 ---
+- include: apt-prerequisites.yml
+- include: apt-upgrade.yml
+
 - name: Set timezone to Europe/Amsterdam
   lineinfile: dest=/etc/timezone state=present
               line=Europe/Amsterdam regexp=.*/.*
@@ -34,28 +37,6 @@
 - name: Make sure hisparc user is in adm and plugdev groups
   user: name=hisparc groups=adm,sudo,plugdev append=yes
   sudo: yes
-
-- name: Update package index
-  apt: update_cache=yes
-  sudo: yes
-
-- name: Install update-notifier-common
-  apt: name=screen state=present
-  sudo: yes
-
-- name: Safe-upgrade packages
-  apt: upgrade=safe
-  sudo: yes
-
-- name: Check if reboot is necessary
-  stat: path=/var/run/reboot-required
-  register: p
-
-# if path p is a regular file, trigger reboot
-- name: Flag a reboot if necessary
-  debug: msg="Reboot is necessary"
-  when: p.stat.isreg is defined
-  notify: reboot
 
 - name: Install screen
   apt: name=screen state=present
