--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -9,6 +9,15 @@
   handlers:
     - include: handlers.yml
 
+- hosts: jessie
+  tasks:
+    - include: apt-prerequisites.yml
+    - include: jessie.yml
+    - include: apt-upgrade.yml
+  handlers:
+    - include: handlers.yml
+  tags: jessie
+
 - hosts: all
   tasks:
     - include: common.yml
