--- a/provisioning/apt-upgrade.yml
+++ b/provisioning/apt-upgrade.yml
@@ -8,6 +8,6 @@
 
 # if path p is a regular file, trigger reboot
 - name: Flag a reboot if necessary
-  debug: msg="Reboot is necessary"
+  command: /bin/true
   when: p.stat.isreg is defined
   notify: reboot
