--- a/provisioning/handlers.yml
+++ b/provisioning/handlers.yml
@@ -9,7 +9,7 @@
   sudo: yes
 
 - name: wait for server to come back
-  local_action: wait_for host={{ ansible_ssh_host }}
+  local_action: wait_for host={{ ansible_ssh_host | default(inventory_hostname) }}
                 port={{ ansible_ssh_port }} delay=30 state=started
 
 - name: restart openvpn
