Include tools like h5ls

--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -11,6 +11,7 @@
     - redis-server
     - python-redis
     - libftdi-dev
+    - hdf5-tools
 
 - name: Install PySPARC prerequisites (python packages)
   pip: name={{ item }} state=present
