Ensure PySPARC is running

--- a/provisioning/pysparc.yml
+++ b/provisioning/pysparc.yml
@@ -32,3 +32,7 @@
   sudo: yes
   notify: restart pysparc
   tags: pysparc
+
+- name: ensure pysparc is running
+  supervisorctl: name=pysparc state=started
+  tags: pysparc
