Do not run pysparc on vagrant box

--- a/provisioning/pysparc.yml
+++ b/provisioning/pysparc.yml
@@ -35,4 +35,5 @@
 
 - name: ensure pysparc is running
   supervisorctl: name=pysparc state=started
+  when: inventory_hostname != "vagrant"
   tags: pysparc
