--- a/provisioning/handlers.yml
+++ b/provisioning/handlers.yml
@@ -10,7 +10,7 @@
 
 - name: wait for server to come back
   local_action: wait_for host={{ ansible_ssh_host | default(inventory_hostname) }}
-                port={{ ansible_ssh_port }} delay=30 state=started
+                port={{ ansible_ssh_port | default(22)}} delay=30 state=started
 
 - name: restart openvpn
   service: name=openvpn state=restarted
