--- a/provisioning/upgrade.yml
+++ b/provisioning/upgrade.yml
@@ -22,23 +22,22 @@
 
     - name: Check if reboot is necessary
       stat: path=/var/run/reboot-required
-      register: p
+      register: reboot
 
-    # if path p is a regular file, trigger reboot
+    # if path reboot is a regular file, trigger reboot
     - name: Flag a reboot if necessary
       debug: msg="Reboot is necessary"
-      when: p.stat.isreg is defined
+      when: reboot.stat.isreg is defined
       notify: reboot
 
     - name: ensure redis-server is started
       service: name=redis-server state=started
-      when: p.stat.isreg is not defined
+      when: reboot.stat.isreg is not defined
       sudo: yes
 
     - name: ensure pysparc is started
       supervisorctl: name=pysparc state=started
-      when: p.stat.isreg is not defined
-      when: inventory_hostname != "vagrant"
+      when: (reboot.stat.isreg is not defined) and (inventory_hostname != "vagrant")
 
   handlers:
     - include: handlers.yml
