--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -16,6 +16,7 @@
   pip: name={{ item }} state=present
   sudo: yes
   with_items:
+    - pbr==1.8.1
     - mock==1.1.0
     - pylibftdi
     - atom
