--- a/provisioning/apt-prerequisites.yml
+++ b/provisioning/apt-prerequisites.yml
@@ -1,7 +1,7 @@
 - name: Update package index
   apt: update_cache=yes
-  sudo: yes
+  become: yes
 
 - name: Install update-notifier-common
   apt: name=update-notifier-common state=present
-  sudo: yes
+  become: yes
