--- a/provisioning/jessie.yml
+++ b/provisioning/jessie.yml
@@ -2,14 +2,14 @@
 - name: Point sources.list to Jessie
   replace: dest=/etc/apt/sources.list regexp='wheezy' replace='jessie'
   register: result
-  sudo: yes
+  become: yes
 
 - name: Update package index
   apt: update_cache=yes
   when: result|changed
-  sudo: yes
+  become: yes
 
 - name: Dist-upgrade packages
   apt: upgrade=dist
   when: result|changed
-  sudo: yes
+  become: yes
