--- a/provisioning/upgrade_jessie.yml
+++ b/provisioning/upgrade_jessie.yml
@@ -1,6 +1,11 @@
 ---
 - hosts: jessie
   tasks:
+    - name: Point sources.list to Jessie
+      replace: dest=/etc/apt/sources.list regexp='wheezy' replace='jessie'
+      register: result
+      become: yes
+
     - name: Update package index
       apt: update_cache=yes
       become: yes
