Fix: Jessie pip is broken
Old, but not ancient, pip expects IncompleteRead from requests, which
is removed in newer versions of requests. So make sure that pip is
quite new, before even thinking about upgrading.

--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -16,6 +16,7 @@
   pip: name={{ item }} state=present
   become: yes
   with_items:
+    - pip>=6.0
     - pbr==1.8.1
     - mock==1.1.0
     - pylibftdi
