--- a/provisioning/pysparc.yml
+++ b/provisioning/pysparc.yml
@@ -35,5 +35,5 @@
 
 - name: ensure pysparc is running
   supervisorctl: name=pysparc state=started
-  when: inventory_hostname != "vagrant"
+  when: "'pysparc' in group_names"
   tags: pysparc
