--- a/provisioning/test.yml
+++ b/provisioning/test.yml
@@ -2,11 +2,15 @@
 - hosts: all
   tasks:
     - local_action: debug var=ansible_ssh_host
+    - local_action: debug var=ansible_ssh_port
     - local_action: debug var=ansible_host
     - local_action: debug var=inventory_hostname
     - local_action: debug var=hostvars[inventory_hostname]['ansible_ssh_host']
     - local_action: debug var=hostvars[inventory_hostname]['inventory_hostname']
     - local_action: debug msg='{{ hostvars[inventory_hostname]['ansible_ssh_host'] | default(inventory_hostname) }}'
     - name: wait for server to come back
-      local_action: wait_for host={{ hostvars[inventory_hostname]['ansible_ssh_host'] | default(inventory_hostname) }}
-                    port={{ ansible_ssh_port | default(22)}} state=started timeout=3
+      local_action:
+        module: wait_for
+        host: "{{ hostvars[inventory_hostname]['ansible_ssh_host'] | default(inventory_hostname) }}"
+        port: "{{ ansible_ssh_port | default(22)}}"
+        state: started
