--- a/provisioning/handlers.yml
+++ b/provisioning/handlers.yml
@@ -32,7 +32,7 @@
 - name: wait for server to come back
   local_action:
     module: wait_for
-    host: {{ hostvars[inventory_hostname]['ansible_ssh_host'] | default(inventory_hostname) }}
-    port: {{ ansible_ssh_port | default(22)}}
+    host: "{{ hostvars[inventory_hostname]['ansible_ssh_host'] | default(inventory_hostname) }}"
+    port: "{{ ansible_ssh_port | default(22)}}"
     delay: 70
     state: started
