Make sure python-redis is not installed
This overrides pip-installed redis, and so zaanlands1 was using an
older version, resulting in a bug. Fixes #46.

--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -12,6 +12,12 @@
     - libftdi-dev
     - hdf5-tools
 
+- name: Make sure conflicting system packages are absent
+  apt:
+    name: python-redis
+    state: absent
+  become: yes
+
 - name: Install PySPARC prerequisites (python packages)
   pip: name={{ item }} state=present
   become: yes
