--- a/provisioning/test-reboot.yml
+++ b/provisioning/test-reboot.yml
@@ -1,8 +1,19 @@
 ---
 - hosts: all
   tasks:
+  # https://support.ansible.com/hc/en-us/articles/201958037-Reboot-a-server-and-wait-for-it-to-come-back
+  # Systemd (starting with Jessie) kills off sshd too quickly, before it can
+  # close connections. So wait a few seconds.
+    - name: reboot
+      shell: sleep 5 && shutdown -r now "Ansible triggered a reboot"
+      async: 1
+      poll: 0
+      ignore_errors: true
+      # notify: wait for server to come back
+      become: yes
+
     - name: wait for server to come back
       wait_for_connection:
       args:
-        delay: 70
+        delay: 10
         timeout: 600
