Install reboot-notifier on newer OSes
…but update-notifier-common on older OSes

--- a/provisioning/apt-prerequisites.yml
+++ b/provisioning/apt-prerequisites.yml
@@ -2,6 +2,15 @@
   apt: update_cache=yes
   become: yes
 
-- name: Install update-notifier-common
+- name: Install update-notifier-common (older OSes)
   apt: name=update-notifier-common state=present
+  register: result
+  ignore_errors: true
+  become: yes
+
+- name: Install reboot-notifier (newer OSes)
+  apt:
+    name: reboot-notifier
+    state: present
+  when: result|failed
   become: yes
