Initialize and align slave

--- a/pysparc/config.ini
+++ b/pysparc/config.ini
@@ -28,6 +28,25 @@ post_coincidence_time = 2.0
 pre_coincidence_time = 1.0
 trigger_condition = 2
 
+[HiSPARC II Slave]
+ch1_gain_negative = 128
+ch1_gain_positive = 128
+ch1_offset_negative = 128
+ch1_offset_positive = 128
+ch1_threshold_high = 320
+ch1_threshold_low = 250
+ch1_voltage = 300
+ch2_gain_negative = 128
+ch2_gain_positive = 128
+ch2_offset_negative = 128
+ch2_offset_positive = 128
+ch2_threshold_high = 320
+ch2_threshold_low = 250
+ch2_voltage = 300
+common_offset = 0
+full_scale = 0
+one_second_enabled = True
+
 [HiSPARC III Master]
 ch1_gain_negative = 128
 ch1_gain_positive = 128
@@ -50,3 +69,22 @@ one_second_enabled = True
 post_coincidence_time = 2.0
 pre_coincidence_time = 1.0
 trigger_condition = 2
+
+[HiSPARC III Slave]
+ch1_gain_negative = 128
+ch1_gain_positive = 128
+ch1_offset_negative = 128
+ch1_offset_positive = 128
+ch1_threshold_high = 320
+ch1_threshold_low = 250
+ch1_voltage = 300
+ch2_gain_negative = 128
+ch2_gain_positive = 128
+ch2_offset_negative = 128
+ch2_offset_positive = 128
+ch2_threshold_high = 320
+ch2_threshold_low = 250
+ch2_voltage = 300
+common_offset = 0
+full_scale = 0
+one_second_enabled = True
