Install the python schedule package
For scheduling in-process tasks. Hopefully, this will bring some sanity
to the DAQ’s run() method.

--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -8,6 +8,7 @@
     - python-pip
     - python-tables
     - python-flask
+    - python-schedule
     - redis-server
     - libftdi-dev
     - hdf5-tools
