We don't need slave one second messages

--- a/pysparc/config.ini
+++ b/pysparc/config.ini
@@ -45,7 +45,7 @@ ch2_threshold_low = 250
 ch2_voltage = 300
 common_offset = 0
 full_scale = 0
-one_second_enabled = True
+one_second_enabled = False
 
 [HiSPARC III Master]
 ch1_gain_negative = 128
@@ -87,4 +87,4 @@ ch2_threshold_low = 250
 ch2_voltage = 300
 common_offset = 0
 full_scale = 0
-one_second_enabled = True
+one_second_enabled = False
