Fix pylibftdi bug on fresh systems
Fixes: pylibftdi._base.FtdiError: usb_find_busses() failed (-1)

With this, pylibftdi now uses the newer libftdi which uses the newer
libusb. The implied ‘older’ here means: ancient.

--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -9,7 +9,7 @@
     - python-tables
     - python-flask
     - redis-server
-    - libftdi-dev
+    - libftdi1-dev
     - hdf5-tools
 
 - name: Make sure conflicting system packages are absent
