--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -30,6 +30,8 @@
     - requests>=2.18.4
     - redis>=2.10.3
     - pip>=6.0
+    # try newer versions of setuptools to decrease startup time
+    - setuptools>33.1.1
 
 # DF: Ok, so here I was following the Redis FAQ to be able to overcommit
 # memory. I was going to look at the reason for the large DB next, but
