Get rid of ansible deprecation warnings

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-hostfile=provisioning/ansible_inventory
+inventory = provisioning/ansible_inventory
 
 [ssh_connection]
-pipelining=True
+pipelining = True
