Add config option to store data in file

--- a/pysparc/config.ini
+++ b/pysparc/config.ini
@@ -4,6 +4,7 @@ force_align_adcs = True
 station_name = my_station
 station_number = 0
 station_password = my_password
+store_data_in_file = False
 
 [HiSPARC II Master]
 ch1_gain_negative = 128
