Let supervisor start the new DAQ

--- a/provisioning/supervisord-pysparc.conf
+++ b/provisioning/supervisord-pysparc.conf
@@ -1,5 +1,5 @@
 [program:pysparc]
-command=/usr/bin/python /opt/pysparc/scripts/test_hv.py
+command=/opt/pysparc/bin/pysparc_daq
 user=hisparc
 environment=HOME="/home/hisparc",USER="hisparc"
 directory=/home/hisparc
