--- a/provisioning/raspberry_pi.yml
+++ b/provisioning/raspberry_pi.yml
@@ -12,7 +12,7 @@
 
 - name: Remove raspi-config.sh
   file: path=/etc/profile.d/raspi-config.sh state=absent
-  when: result|changed
+  when: result is changed
   become: yes
 
 - name: Restore default rc.local
@@ -41,7 +41,7 @@
   register: result
 
 - name: Reset ssh connection to allow user changes to affect current user
-  when: result|changed
+  when: result is changed
   shell: sleep 1; pkill -u {{ ansible_ssh_user }} sshd
   async: 3
   poll: 1
