--- a/provisioning/prerequisites.yml
+++ b/provisioning/prerequisites.yml
@@ -48,5 +48,5 @@
 
 - name: Reload kernel parameters
   service: name=procps state=restarted
-  when: result|changed
+  when: result is changed
   become: yes
